test/mutation_analysis/s1021_remove_outermost_parentheses/hafis/o3/mutants/2/result.txt
./test/mutation_analysis/s1021_remove_outermost_parentheses/hafis/o3/mutants/2/Solution.java:20: error: unreachable statement
        while (false) {
                      ^
1 error
